--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -21,6 +21,12 @@ jobs:
         with:
           node-version: '18'
 
+      - name: Setup JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+
       - name: Install dependencies
         run: npm install
 
@@ -29,6 +35,9 @@ jobs:
 
       - name: Bundle React Native code
         run: npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res
+
+      - name: Chmod gradlew
+        run: chmod +x android/gradlew
 
       - name: Build APK
         run: cd android && ./gradlew assembleDebug && cd ..
