--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -42,8 +42,15 @@ jobs:
       - name: Build APK
         run: cd android && ./gradlew assembleDebug && cd ..
 
-      - name: Upload APK as a release
+      - name: Upload APK as artifact
         uses: actions/upload-artifact@v2
         with:
           name: app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Releasing using Hub
+        uses: ShaunLWM/action-release-debugapk@master
+        env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        APP_FOLDER: app
+        RELEASE_TITLE: New Build
