--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -51,6 +51,6 @@ jobs:
       - name: Releasing using Hub
         uses: ShaunLWM/action-release-debugapk@master
         env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
         APP_FOLDER: app
         RELEASE_TITLE: New Build
