[GA] build-debug.yml - Attempting to make a release

--- a/.github/workflows/build-debug.yml
+++ b/.github/workflows/build-debug.yml
@@ -5,8 +5,8 @@ name: React Native Build
 
 on:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
   build:
@@ -47,3 +47,10 @@ jobs:
         with:
           name: app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
+          
+      - name: Releasing using Hub
+        uses: ShaunLWM/action-release-debugapk@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          APP_FOLDER: app
+          RELEASE_TITLE: New Build
