--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-select-dropdown": "^4.0.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^6.0.0-beta.8",
     "tailwindcss": "^3.4.3"
