--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-fit-image": "^1.5.5",
+    "react-native-google-cast": "^4.8.0",
     "react-native-material-you-colors": "^0.1.2",
     "react-native-orientation-locker": "^1.6.0",
     "react-native-paper": "^5.12.3",
