--- a/package.json
+++ b/package.json
@@ -1,60 +1,60 @@
 {
-  "name": "iptx",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android --experimental-debugger",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start --experimental-debugger",
-    "nocache": "react-native start --experimental-debugger --reset-cache",
-    "test": "jest",
-    "postinstall": "npx patch-package"
-  },
-  "dependencies": {
-    "@iptv/playlist": "^1.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/hooks": "^3.0.0",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "nativewind": "^4.0.36",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-document-picker": "^9.1.1",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-elements": "^3.4.3",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-fit-image": "^1.5.5",
-    "react-native-material-you-colors": "^0.1.2",
-    "react-native-orientation-locker": "^1.6.0",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
-    "react-native-select-dropdown": "^4.0.0",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-video": "^6.0.0-beta.8",
-    "tailwindcss": "^3.4.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.21",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.5",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "iptx",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "lint": "eslint .",
+        "start": "react-native start --experimental-debugger",
+        "nocache": "react-native start --experimental-debugger --reset-cache",
+        "test": "jest",
+        "postinstall": "npx patch-package"
+    },
+    "dependencies": {
+        "@iptv/playlist": "^1.0.0",
+        "@react-native-async-storage/async-storage": "^1.23.1",
+        "@react-native-community/hooks": "^3.0.0",
+        "@react-navigation/native": "^6.1.17",
+        "@react-navigation/native-stack": "^6.9.26",
+        "nativewind": "^4.0.36",
+        "react": "18.2.0",
+        "react-native": "0.73.6",
+        "react-native-document-picker": "^9.1.1",
+        "react-native-dotenv": "^3.4.11",
+        "react-native-elements": "^3.4.3",
+        "react-native-fast-image": "^8.6.3",
+        "react-native-fit-image": "^1.5.5",
+        "react-native-material-you-colors": "^0.1.2",
+        "react-native-orientation-locker": "^1.6.0",
+        "react-native-paper": "^5.12.3",
+        "react-native-reanimated": "^3.8.1",
+        "react-native-safe-area-context": "^4.9.0",
+        "react-native-screens": "^3.30.1",
+        "react-native-select-dropdown": "^4.0.0",
+        "react-native-vector-icons": "^10.0.3",
+        "react-native-video": "^6.0.0-beta.8",
+        "tailwindcss": "^3.4.3"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@babel/preset-env": "^7.20.0",
+        "@babel/runtime": "^7.20.0",
+        "@react-native/babel-preset": "0.73.21",
+        "@react-native/eslint-config": "0.73.2",
+        "@react-native/metro-config": "0.73.5",
+        "@react-native/typescript-config": "0.73.1",
+        "@types/react": "^18.2.6",
+        "@types/react-native-vector-icons": "^6.4.18",
+        "@types/react-test-renderer": "^18.0.0",
+        "babel-jest": "^29.6.3",
+        "eslint": "^8.19.0",
+        "jest": "^29.6.3",
+        "prettier": "2.8.8",
+        "react-test-renderer": "18.2.0",
+        "typescript": "5.0.4"
+    },
+    "engines": {
+        "node": ">=18"
+    }
 }
