--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
         "react-native-elements": "^3.4.3",
         "react-native-fast-image": "^8.6.3",
         "react-native-fit-image": "^1.5.5",
+        "react-native-gesture-handler": "^2.16.0",
         "react-native-material-you-colors": "^0.1.2",
         "react-native-orientation-locker": "^1.6.0",
         "react-native-paper": "^5.12.3",
         "react-native-reanimated": "^3.8.1",
         "react-native-safe-area-context": "^4.9.0",
+        "react-native-screen-brightness": "^2.0.0-alpha",
         "react-native-screens": "^3.30.1",
         "react-native-select-dropdown": "^4.0.0",
         "react-native-vector-icons": "^10.0.3",
