--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "@react-native-community/hooks": "^3.0.0",
         "@react-navigation/native": "^6.1.17",
         "@react-navigation/native-stack": "^6.9.26",
+        "@rneui/base": "github:react-native-elements/react-native-elements#base",
+        "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
         "nativewind": "^4.0.36",
         "react": "18.2.0",
         "react-native": "0.73.6",
@@ -31,7 +33,6 @@
         "react-native-paper": "^5.12.3",
         "react-native-reanimated": "^3.8.1",
         "react-native-safe-area-context": "^4.9.0",
-        "react-native-screen-brightness": "^2.0.0-alpha",
         "react-native-screens": "^3.30.1",
         "react-native-select-dropdown": "^4.0.0",
         "react-native-vector-icons": "^10.0.3",
