--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "postinstall": "npx patch-package"
     },
     "dependencies": {
+        "@adrianso/react-native-device-brightness": "^1.2.7",
         "@iptv/playlist": "^1.0.0",
         "@react-native-async-storage/async-storage": "^1.23.1",
         "@react-native-community/hooks": "^3.0.0",
@@ -37,6 +38,7 @@
         "react-native-select-dropdown": "^4.0.0",
         "react-native-vector-icons": "^10.0.3",
         "react-native-video": "^6.0.0-beta.8",
+        "react-native-volume-manager": "^1.10.0",
         "tailwindcss": "^3.4.3"
     },
     "devDependencies": {
